--- a/miniprogram/pages/user-center/index.wxss
+++ b/miniprogram/pages/user-center/index.wxss
@@ -1,144 +1,13 @@
-.page_container {
-    background-color: #f5f5f5;
-    height: 100vh;
-    font-family: PingFang SC;
-}
-
-.top_bg {
-    height: 120rpx;
-}
-
-.main_content {
-    /* background-color: #fff; */
-    border-top-left-radius: 30rpx;
-    border-top-right-radius: 30rpx;
-    position: relative;
-}
-
-.userinfo_container {
-    background-color: white;
-    height: 270rpx;
-    width: 100vw;
-    display: flex;
-    /* gap: 80rpx; */
-    align-items: center;
-    /* gap: 20rpx; */
-    position: absolute;
-    top: -30rpx;
-    padding-right: 60rpx;
-    justify-content: space-between;
-}
-
-
-
-.username {
-    color: #333;
-    font-size: 32rpx;
-    margin-top: 20rpx;
-    color: rgba(0, 0, 0, 0.9);
-    max-width: 200rpx;
-}
-
 .settings_container {
-    top: 250rpx;
-    background-color: var(--ghostWhite);
-    position: relative;
-    padding: 0 40rpx;
     display: flex;
-    flex-direction: column;
-    gap: 10rpx;
+    justify-content: space-around;
 }
 
 .setting_item {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 30rpx 0rpx;
-    border-bottom: 1rpx solid rgba(0, 0, 0, 0.08);
-    font-size: 28rpx;
-}
-.vip_container{
-    position: relative;
-    top: 150rpx;
-    padding: 0 15rpx;
-    display: flex;
-    flex-direction: column;
-    gap: 10rpx;
-    z-index: 100;
-}
-
-.vip_item {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 30rpx 0rpx;
-    font-size: 28rpx;
-}
-
-.left {
-    display: flex;
-    align-items: center;
-    gap: 20rpx;
-}
-
-.contact-button {
-    background-color: transparent;
-    /* background-color: turquoise; */
-    padding-top: 10rpx;
-    padding-bottom: 10rpx;
-    box-sizing: border-box;
-    padding-left: 0rpx;
-    margin: 0;
-    width: 100%;
-    font-weight: 400;
-    font-size: 28rpx;
-    color: rgba(0, 0, 0, 0.9);
-    line-height: 56rpx;
-    text-align: left;
-}
-
-.button-hover {
-    background-color: #fff;
+    text-align: center;
 }
 
 .setting_icon {
-    width: 40rpx;
-    height: 40rpx;
-}
-
-.setting_text {
-    color: rgba(0, 0, 0, 0.9);
-}
-
-.arrow_icon {
-    width: 30rpx;
-    height: 30rpx;
-}
-
-.mytop-box {
-    display: flex;
-    width: 240rpx;
-    height: 100%;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    /* background-color: aqua; */
-}
-
-.mytop-avatar {
-    /* position: relative; */
-    overflow: hidden;
-    width: 130rpx;
-    height: 130rpx;
-    /* left: 50%; */
-    border-radius: 50%;
-    box-shadow: 3px 3px 10px rgba(146, 146, 146, 0.2);
-}
-
-.mytop-username {
-    height: 100rpx;
-    font-size: 35rpx;
-    font-family: SourceHanSansCN-Medium;
-    color: #000000;
-    margin-top: 10rpx;
+    width: 50rpx;
+    height: 50rpx;
 }
