--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -2,43 +2,43 @@
 <start wx:if="{{PageCur=='start'}}"></start>
 <order wx:if="{{PageCur=='order'}}"></order>
 <watchOrder wx:if="{{PageCur=='watchOrder'}}"></watchOrder>
-<user-center wx:if="{{PageCur=='user-center'}}"></user-center>
+<user-center wx:if="{{PageCur=='user-center'}}" bind:onSwitchMode="onSwitchMode"></user-center>
 <manage wx:if="{{PageCur=='manage'}}"></manage>
 
 <view class="cu-bar tabbar bg-white shadow foot">
-  <view class="action" bindtap="NavChange" data-cur="start">
-    <view class='cuIcon-cu-image'>
-      <image src="/images/tabbar/home{{PageCur=='start'?'_cur':''}}.png"></image>
+    <view wx:if="{{mode=='client'}}" class="action" bindtap="NavChange" data-cur="start">
+        <view class='cuIcon-cu-image'>
+            <image src="/images/tabbar/home{{PageCur=='start'?'_cur':''}}.png"></image>
+        </view>
+        <view class="{{PageCur=='start'?'text-blue':'text-gray'}}">首页</view>
     </view>
-    <view class="{{PageCur=='start'?'text-blue':'text-gray'}}">首页</view>
-  </view>
 
-  <view class="action" bindtap="NavChange" data-cur="order">
-    <view class='cuIcon-cu-image'>
-      <image src="/images/tabbar/order{{PageCur=='order'?'_cur':''}}.png"></image>
+    <view wx:if="{{mode=='client'}}" class="action" bindtap="NavChange" data-cur="order">
+        <view class='cuIcon-cu-image'>
+            <image src="/images/tabbar/order{{PageCur=='order'?'_cur':''}}.png"></image>
+        </view>
+        <view class="{{PageCur=='order'?'text-blue':'text-gray'}}">订单</view>
     </view>
-    <view class="{{PageCur=='order'?'text-blue':'text-gray'}}">订单</view>
-  </view>
 
-  <view class="action" bindtap="NavChange" data-cur="watchOrder">
-    <view class='cuIcon-cu-image'>
-      <image src="/images/tabbar/watchOrder{{PageCur=='watchOrder'?'_cur':''}}.png"></image>
+    <view wx:if="{{mode=='manage'}}" class="action" bindtap="NavChange" data-cur="watchOrder">
+        <view class='cuIcon-cu-image'>
+            <image src="/images/tabbar/watchOrder{{PageCur=='watchOrder'?'_cur':''}}.png"></image>
+        </view>
+        <view class="{{PageCur=='watchOrder'?'text-blue':'text-gray'}}">听单</view>
     </view>
-    <view class="{{PageCur=='watchOrder'?'text-blue':'text-gray'}}">听单</view>
-  </view>
 
-  <view class="action" bindtap="NavChange" data-cur="manage">
-    <view class='cuIcon-cu-image'>
-      <image src="/images/tabbar/manage{{PageCur=='manage'?'_cur':''}}.png"></image>
+    <view wx:if="{{mode=='manage'}}" class="action" bindtap="NavChange" data-cur="manage">
+        <view class='cuIcon-cu-image'>
+            <image src="/images/tabbar/manage{{PageCur=='manage'?'_cur':''}}.png"></image>
+        </view>
+        <view class="{{PageCur=='manage'?'text-blue':'text-gray'}}">管理</view>
     </view>
-    <view class="{{PageCur=='manage'?'text-blue':'text-gray'}}">管理</view>
-  </view>
 
-  <view class="action" bindtap="NavChange" data-cur="user-center">
-    <view class='cuIcon-cu-image'>
-      <image src="/images/tabbar/user-center{{PageCur=='user-center'?'_cur':''}}.png"></image>
+    <view class="action" bindtap="NavChange" data-cur="user-center">
+        <view class='cuIcon-cu-image'>
+            <image src="/images/tabbar/user-center{{PageCur=='user-center'?'_cur':''}}.png"></image>
+        </view>
+        <view class="{{PageCur=='user-center'?'text-blue':'text-gray'}}">我的</view>
     </view>
-    <view class="{{PageCur=='user-center'?'text-blue':'text-gray'}}">我的</view>
-  </view>
-  
+
 </view>
