--- a/miniprogram/pages/pay-car/index.wxml
+++ b/miniprogram/pages/pay-car/index.wxml
@@ -24,7 +24,7 @@
                             <block wx:for="{{ orderDetail.goodsList }}" wx:for-item="goodsDetail" wx:key="_id" wx:for-index="index">
                                 <view class="cu-list menu-avatar">
                                     <view class="cu-item">
-                                        <image class="cu-avatar round lg" src="{{goodsDetail.img||'../../images/default-goods-image.png'}}" mode="aspectFill" />
+                                        <image class="cu-avatar round lg" src="{{goodsDetail.img||'../../images/icons/morentu.svg'}}" mode="aspectFill" />
                                         <view class="content flex-sub">
                                             <view class="text-grey">{{ goodsDetail.title }}</view>
                                             <view class="text-gray text-sm flex justify-between">
