--- a/miniprogram/pages/user-center/index.wxml
+++ b/miniprogram/pages/user-center/index.wxml
@@ -9,14 +9,15 @@
     <!-- <image src='/images/logo.png' class='png' mode='aspectFit'></image> -->
     <view class='gray-text text-xs'>加载中...</view>
 </view>
-<view style="height: {{containerHeight - 120}}rpx;position: relative;">
-    <view class=' text-gray' bind:tap="gotoSettingPage">
-        <view class="margin"> {{userInfo.name?'欢迎您 '+ userInfo.name : '未设置昵称'}}</view>
+<scroll-view refresher-enabled="true" bindrefresherrefresh="getUser" refresher-triggered="{{isRefreshing}}" style="height: {{containerHeight - 120}}rpx;position: relative;">
+    <view class="flex justify-between">
+        <view class="margin text-gray" bind:tap="gotoSettingPage"> {{userInfo.name?'欢迎您 '+ userInfo.name : '未设置昵称'}}</view>
     </view>
+
     <view class="cu-card">
         <view style="position: absolute; text-align: center;right: 60rpx;top: 60rpx;z-index: 100;">
             <!-- 小皇冠 -->
-            <image wx:if="{{vipUserInfo}}" style="width: 60rpx;right: 6rpx; top: -30rpx; position: absolute;transform: rotate(35deg);z-index: 100;" src="../../images/icons/vip.svg" mode="widthFix"></image>
+            <image wx:if="{{vipInfo}}" style="width: 60rpx;right: 6rpx; top: -30rpx; position: absolute;transform: rotate(35deg);z-index: 100;" src="../../images/icons/vip.svg" mode="widthFix"></image>
             <!-- 头像 -->
             <button class="cu-avatar xl round shadow-warp" open-type="chooseAvatar" bind:chooseavatar="onChooseAvatar">
                 <image class="cu-avatar xl round " src="{{userInfo.avatarUrl||'../../images/avatar.svg'}}"></image>
@@ -24,27 +25,27 @@
         </view>
         <!-- VIP -->
         <view class="cu-item shadow-warp padding" style="min-height: 240rpx;border-radius: 32rpx;">
-            <view wx:if="{{vipUserInfo&&vipUserInfo.vipPackage}}">
-                <!-- （消费{{vipUserInfo.vipPackage.rate==100?'不打':vipUserInfo.vipPackage.rate}}折） -->
-                <view>{{vipUserInfo.vipPackage.name}}</view>
-                <view class="text-gray text-sm">{{vipUserInfo.vipPackage.remarks}}</view>
+            <view wx:if="{{vipInfo&&vipInfo.vipLevel}}">
+                <!-- （消费{{vipInfo.vipPackage.rate==100?'不打':vipInfo.vipPackage.rate}}折） -->
+                <view class="text-lg">{{vipInfo.vipLevel.name}}<span class="text-orange text-xs margin-left">再充{{vipInfo.vipLevel.next/100}}提升等级</span></view>
+                <view class="text-gray text-sm margin-top">{{vipInfo.vipLevel.remarks}}</view>
             </view>
             <view wx:else class="text-gray text-sm">
-                普通会员
+                非会员
             </view>
             <view class="flex justify-around">
                 <view style="text-align: center;">
                     <!-- <image></image> -->
                     <view class="padding">余额</view>
                     <view style="font-size: 35rpx;font-weight: bold;">
-                        ¥ {{vipUserInfo.account.balance/100||'0.00'}}
+                        ¥ {{vipInfo.account.balance/100||'0.00'}}
                     </view>
                 </view>
                 <view style="text-align: center;">
                     <!-- <image></image> -->
                     <view class="padding">存酒</view>
                     <view style="font-size: 35rpx;font-weight: bold;">
-                        {{vipUserInfo.account.beer||'0'}}
+                        {{vipInfo.account.beer||'0'}}
                     </view>
                 </view>
             </view>
@@ -60,6 +61,11 @@
                 <view class="text-gray text-xs">在线充值</view>
             </view>
 
+            <view class="setting_item" bind:tap="gotoBillPage">
+                <image class="setting_icon" src="../../images/icons/zdjl.svg" />
+                <view class="text-gray text-xs">账单记录</view>
+            </view>
+
             <view class="setting_item" bind:tap="gotoSettingPage">
                 <image class="setting_icon" src="../../images/icons/wdxx.svg" />
                 <view class="text-gray text-xs">我的信息</view>
@@ -73,7 +79,11 @@
         <view style="height: 180rpx;"></view>
     </view>
 
-</view>
+    <view class="margin" style="width: 100vw; text-align: center;" bind:tap="switchMode">
+        切换模式
+    </view>
+</scroll-view>
+
 <!-- <cloud-tip-modal showUploadTipProps="{{showUploadTip}}" /> -->
 <!-- 购买VIP -->
 <view class="cu-modal bottom-modal {{showPayDialog?'show':''}}">
