--- a/miniprogram/pages/order/index.wxml
+++ b/miniprogram/pages/order/index.wxml
@@ -28,27 +28,35 @@
                                 <view class="cu-list menu-avatar">
                                     <view class="cu-item">
                                         <image class="cu-avatar round lg" src="{{goodsDetail.img||'../../images/icons/morentu.svg'}}" mode="aspectFill" />
-                                        <view class="content flex-sub">
+                                        <view class="content">
                                             <view class="text-grey">{{ goodsDetail.title }}</view>
-                                            <view class="text-gray text-sm flex justify-between">
-                                                <view style="color: gray;">原价： ¥ {{ goodsDetail.price / 100 }}</view>
-                                                <view style="color: gold;">会员价： ¥ {{ goodsDetail.vipPrice / 100 }}</view>
+                                            <view class="text-gray text-sm flex" style="gap: 21rpx;">
+                                                <view style="color: gray;">原价：¥ {{ goodsDetail.price / 100 }}</view>
+                                                <view style="color: gold;">会员价：¥ {{ goodsDetail.vipPrice / 100 }}</view>
                                                 <view class="text-gray text-sm">
                                                     x{{ goodsDetail.number}}
                                                 </view>
                                             </view>
+
                                         </view>
+
                                     </view>
                                 </view>
                             </block>
-                            <view class="content padding flex align-center">
+                            <view class="content padding flex align-center justify-between">
                                 <view>
                                     {{filter.format(orderDetail.createDate, 'YY-MM-DD hh:mm:ss')}}
                                 </view>
-                                <view wx:if="{{orderDetail.state != 0}}" class="margin-left ">
-                                    {{orderDetail.type==0?'原价支付：':'会员支付：'}} <span style="color: red;font-size: large;">¥ {{orderDetail.total}}</span>
+                                <view wx:if="{{orderDetail.state != 0}}">
+                                    {{orderDetail.type==0?'原价支付：':'会员支付：'}} <span style="color: red;font-size: large;">¥ {{orderDetail.total/100}}</span>
+                                </view>
+                                <view wx:if="{{orderDetail.state==0}}">
+                                    <button class="cu-btn bg-blue round sm" style="width: 100rpx;" bind:tap="gotoPayCar">
+                                        去支付
+                                    </button>
                                 </view>
                             </view>
+
                         </view>
                     </view>
                 </block>
