--- a/miniprogram/pages/watchOrder/index.wxml
+++ b/miniprogram/pages/watchOrder/index.wxml
@@ -10,7 +10,7 @@
         <view class='gray-text text-xs'>加载中...</view>
     </view>
     <!-- 店铺 -->
-    <shopBar bind:onShopChange="onShopChange"></shopBar>
+    <!-- <shopBar bind:onShopChange="onShopChange"></shopBar> -->
 
     <!-- 数据加载完毕 -->
     <block wx:if="{{ !isLoading }}">
