--- a/miniprogram/pages/manage/application/index.wxml
+++ b/miniprogram/pages/manage/application/index.wxml
@@ -27,15 +27,16 @@
                 </view>
 
                 <view class="content padding-left">
+                    <view class="text-cut text-sm"> 姓名：{{item.name}}</view>
                     <view class="text-cut text-sm"> 电话：{{item.phone}}</view>
                     <view class="text-cut text-sm"> 备注：{{item.remarks}}</view>
                     <view class="text-cut text-sm"> {{filter.format(item.createDate, 'YY-MM-DD hh:mm:ss')}}</view>
                 </view>
                 <view class="action padding-bottom-xs">
-                    <button class="cu-btn bg-red shadow sm" style="width: 90rpx;" bind:tap="applicationDispass" data-id="{{item._id}}">
+                    <button class="cu-btn bg-red shadow sm" style="width: 90rpx;" bind:tap="applicationDispass" data-item="{{item}}">
                         驳回
                     </button>
-                    <button class="cu-btn bg-blue shadow sm" style="margin-left: 9rpx;width: 120rpx;" bind:tap="applicationPass" data-id="{{item._id}}">
+                    <button class="cu-btn bg-blue shadow sm" style="margin-left: 9rpx;width: 120rpx;" bind:tap="applicationPass" data-item="{{item}}">
                         审核通过
                     </button>
                 </view>
