--- a/miniprogram/pages/manage/dishes-edit/index.wxml
+++ b/miniprogram/pages/manage/dishes-edit/index.wxml
@@ -1,47 +1,47 @@
 <!--pages/manage/dishes-edit/index.wxml-->
 <cu-custom bgColor="bg-white" isBack="{{true}}">
-  <view slot="backText">返回</view>
-  <view slot="content">新增商品</view>
+    <view slot="backText">返回</view>
+    <view slot="content">新增商品</view>
 </cu-custom>
 <form catchsubmit="formSubmit" catchreset="formReset">
-  <view class="cu-form-group margin-top">
-    <view class="title">所属店铺</view>
-    <input value="{{shop.name}}" disabled></input>
-  </view>
-  <view class="cu-form-group margin-top">
-    <view class="title">商品名称</view>
-    <input name="title" placeholder="请输入..." value="{{goods.title}}"></input>
-  </view>
+    <view class="cu-form-group margin-top">
+        <view class="title">所属店铺</view>
+        <input value="{{shop.name}}" disabled></input>
+    </view>
+    <view class="cu-form-group margin-top">
+        <view class="title">商品名称</view>
+        <input name="title" placeholder="请输入..." value="{{goods.title}}"></input>
+    </view>
 
-  <view class="cu-form-group">
-    <view class="title">分类</view>
-    <picker name="classify" mode="multiSelector" style="flex: 1;height: 100%;text-align: center;" bindchange="bindPickerChange" value="{{index}}" range="{{goodsTypeList}}" range-key="title">
-      <view style="font-size: 12px;line-height: 90rpx;">
-        {{goodsTypeList[0][index[0]].title}}，{{goodsTypeList[1][index[1]].title}}
-      </view>
-    </picker>
-    <!-- <image style="width: 16px;" src="../../../images/icons/choice.svg" mode="widthFix" /> -->
-  </view>
+    <view class="cu-form-group">
+        <view class="title">分类</view>
+        <picker name="classify" mode="multiSelector" style="flex: 1;height: 100%;text-align: center;" bindchange="bindPickerChange" value="{{index}}" range="{{goodsTypeList}}" range-key="title">
+            <view style="font-size: 12px;line-height: 90rpx;">
+                {{goodsTypeList[0][index[0]].title}}，{{goodsTypeList[1][index[1]].title}}
+            </view>
+        </picker>
+        <!-- <image style="width: 16px;" src="../../../images/icons/choice.svg" mode="widthFix" /> -->
+    </view>
 
-  <view class="cu-form-group">
-    <view class="title">原价</view>
-    <input name="price" type="number" value="{{goods.price}}" placeholder="请输入..."></input>
-    <text class="text-orange">单位分</text>
-  </view>
-  <!-- <view class="cu-form-group" bind:tap="openMap">
+    <view class="cu-form-group">
+        <view class="title">原价</view>
+        <input name="price" type="number" value="{{goods.price}}" placeholder="请输入..."></input>
+        <text class="text-orange">单位分</text>
+    </view>
+    <!-- <view class="cu-form-group" bind:tap="openMap">
     <view class="title">会员原价</view>
     <input name="vipPrice" type="number" value="{{goods.vipPrice}}" placeholder="请输入..."></input>
     <text class="text-orange">单位分</text>
   </view> -->
 
-  <upLoadFile count="1" directory="goods" label="请上商品图片" imgs="{{goods.img?[goods.img]:[]}}" bind:onUploadOk="onUploadOk"></upLoadFile>
+    <upLoadFile count="1" directory="goods" label="请上传商品图片" imgs="{{goods.img?[goods.img]:[]}}" bind:onUploadOk="onUploadOk"></upLoadFile>
 
-  <view class="cu-form-group align-start">
-    <view class="title">备注</view>
-    <textarea name="remarks" maxlength="300" bindinput="textareaBInput" value="{{goods.remarks}}" placeholder="请输入备注..."></textarea>
-  </view>
-  <view class="flex padding" style="gap: 8px">
-    <button class="cu-btn round bg-blue" formType="submit">提交</button>
-    <button class="cu-btn round bg-black" formType="reset">重置</button>
-  </view>
+    <view class="cu-form-group align-start">
+        <view class="title">备注</view>
+        <textarea name="remarks" maxlength="300" bindinput="textareaBInput" value="{{goods.remarks}}" placeholder="请输入备注..."></textarea>
+    </view>
+    <view class="flex padding" style="gap: 8px">
+        <button class="cu-btn round bg-blue" formType="submit">提交</button>
+        <button class="cu-btn round bg-black" formType="reset">重置</button>
+    </view>
 </form>
