--- a/miniprogram/pages/user-center/bill/detail.wxml
+++ b/miniprogram/pages/user-center/bill/detail.wxml
@@ -6,37 +6,54 @@
 <view class='cu-load load-modal' wx:if="{{isLoading}}">
     <view class='gray-text text-xs'>加载中...</view>
 </view>
-<view>
-    <view class="padding">
-        消费店铺：{{shopDetail.name}}
+<block wx:if="{{bill.type==1}}">
+    <view>
+        <view class="padding">
+            消费店铺：{{shopDetail.name}}
+        </view>
+        <view class="padding">
+            消费金额：¥{{orderDetail.total/100}}
+        </view>
+        <view class="padding">
+            支付方式：{{orderDetail.payType==1?'会员账号支付':'普通支付'}}
+            <span wx:if="{{orderDetail.rate}}">{{orderDetail.payType==1?'('+orderDetail.rate+'折)':''}}</span>
+        </view>
     </view>
     <view class="padding">
-        消费金额：¥{{orderDetail.total/100}}
+        订单详情
     </view>
-    <view class="padding">
-        支付方式：{{orderDetail.payType==1?'会员账号支付':'普通支付'}}
-    </view>
-</view>
-<view class="padding">
-    订单详情
-</view>
-<block wx:for="{{ orderDetail.goodsList }}" wx:for-item="goodsDetail" wx:key="_id" wx:for-index="index">
-    <view class="cu-list menu-avatar">
-        <view class="cu-item">
-            <image class="cu-avatar round lg" src="{{goodsDetail.img||'../../images/icons/morentu.svg'}}" mode="aspectFill" />
-            <view class="content">
-                <view class="text-grey">{{ goodsDetail.title }}</view>
-                <view class="text-gray text-sm flex" style="gap: 21rpx;">
-                    <view wx:if="{{orderDetail.payType==0}}" style="color: gray;">原价：¥ {{ goodsDetail.price / 100 }}</view>
-                    <view wx:if="{{orderDetail.payType==1}}" style="color: gold;">价格：¥ {{ goodsDetail.vipPrice / 100 }}</view>
-                    <view class="text-gray text-sm">
-                        x{{ goodsDetail.number}}
+    <block wx:for="{{ orderDetail.goodsList }}" wx:for-item="goodsDetail" wx:key="_id" wx:for-index="index">
+        <view class="cu-list menu-avatar">
+            <view class="cu-item">
+                <image class="cu-avatar round lg" src="{{goodsDetail.img||'../../images/icons/morentu.svg'}}" mode="aspectFill" />
+                <view class="content">
+                    <view class="text-grey">{{ goodsDetail.title }}</view>
+                    <view class="text-gray text-sm flex" style="gap: 21rpx;">
+                        <view style="color: gray;">原价：¥ {{ goodsDetail.price / 100 }}</view>
+                        <view class="text-orange">实付：¥ {{ goodsDetail.price*orderDetail.rate / 10000 }}</view>
+                        <view class="text-gray text-sm">
+                            x{{ goodsDetail.number}}
+                        </view>
                     </view>
                 </view>
             </view>
         </view>
+    </block>
+    <view class="padding">
+        支付时间：{{filter.format(bill.createDate,'YY-MM-DD hh:mm:ss')}}
     </view>
 </block>
-<view class="padding">
-    支付时间：{{filter.format(bill.createDate,'YY-MM-DD hh:mm:ss')}}
-</view>
+<!-- 会员充值 -->
+<block wx:if="{{bill.type==0}}">
+    <view>
+        <view class="padding">
+            充值店铺：{{shopDetail.name}}
+        </view>
+        <view class="padding">
+            充值金额：¥{{bill.money/100}}
+        </view>
+        <view class="padding">
+            支付方式：微信支付
+        </view>
+    </view>
+</block>
